--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,6 +47,9 @@
 		"streambuf": "cpp",
 		"typeinfo": "cpp",
 		"fstream": "cpp",
-		"sstream": "cpp"
+		"sstream": "cpp",
+		"list": "cpp",
+		"map": "cpp",
+		"set": "cpp"
 	}
 }
