--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,6 +52,9 @@
 		"typeinfo": "cpp",
 		"ctime": "cpp",
 		"iomanip": "cpp",
-		"numbers": "cpp"
+		"numbers": "cpp",
+		"complex": "cpp",
+		"cstring": "cpp",
+		"cinttypes": "cpp"
 	}
 }
